--- a/platformio.ini
+++ b/platformio.ini
@@ -12,8 +12,12 @@
 platform = espressif32
 board = esp32doit-devkit-v1
 framework = arduino
+board_build.partitions = no_ota.csv
 lib_deps = 
 	ottowinter/ESPAsyncWebServer-esphome@^3.0.0
 	bblanchon/ArduinoJson@^6.19.4
 	esphome/AsyncTCP-esphome@^2.0.0
 	adafruit/DHT sensor library @ ^1.4.3
+	adafruit/Adafruit GFX Library@^1.11.3
+	makuna/NeoPixelBus@^2.7.0
+	adafruit/Adafruit SSD1306@^2.5.7
